force-app/main/default/objects/Customer_Sales_Info_Change_Application__c/Customer_Sales_Info_Change_Application__c.object-meta.xml
<CustomObject>
    <label>Customer Sales Info Change Application</label>
    <nameField>
        <displayFormat>CSCA-{00000}</displayFormat>
        <label>Change Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Sales Info Change Application</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>