force-app/main/default/objects/Customer_Sales_Info_Change_Application__c/fields/Approve_Status__c.field-meta.xml
<CustomField>
    <fullName>Approve_Status__c</fullName>
    <label>Approve Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Approving</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>