force-app/main/default/objects/Customer_Sales_Info_Change_Application__c/fields/Change_Item__c.field-meta.xml
<CustomField>
    <fullName>Change_Item__c</fullName>
    <label>Change Item</label>
    <summaryFilterItems>
        <field>Customer_Tax_Category_Application__c.New_Tax_Category__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Customer_Tax_Category_Application__c.Customer_Sales_Info_Change_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>