force-app/main/default/objects/Customer_Sales_Info_Change_Application__c/fields/Customer_Sales_Info__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Sales Info</label>
    <referenceTo>Customer_Sales_Info__c</referenceTo>
    <relationshipLabel>Customer Sales Info Change Application</relationshipLabel>
    <relationshipName>Customer_Sales_Info_Change_Application</relationshipName>
    <type>Lookup</type>
</CustomField>