force-app/main/default/objects/Customer_Sales_Info_Change_Application__c/fields/Is_Change__c.field-meta.xml
<CustomField>
    <fullName>Is_Change__c</fullName>
    <formula>NOT(
	AND(
        OR(
            ISNULL(TEXT(New_Shipping_Conditions__c)),
            ISBLANK(TEXT(New_Shipping_Conditions__c))
        ),
        OR(
            ISNULL(TEXT(New_Payment_term__c)),
            ISBLANK(TEXT(New_Payment_term__c))
        ),
        OR(
            ISNULL(TEXT(New_Customer_Group__c)),
            ISBLANK(TEXT(New_Customer_Group__c))
        ),
        OR(
            ISNULL(TEXT(New_Currency__c)),
            ISBLANK(TEXT(New_Currency__c))
        ),
					   OR(
            ISNULL(TEXT(New_Account_Assessment__c)),
            ISBLANK(TEXT(New_Account_Assessment__c))
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Change</label>
    <type>Checkbox</type>
</CustomField>