force-app/main/default/objects/Customer_Sales_Info_Change_Application__c/fields/New_Account_Assessment__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Assessment__c</fullName>
    <label>New Account Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Account_Assessment</valueSetName>
    </valueSet>
</CustomField>