force-app/main/default/objects/Customer_Sales_Info_Change_Application__c/fields/New_Currency__c.field-meta.xml
<CustomField>
    <fullName>New_Currency__c</fullName>
    <label>New Currency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>