force-app/main/default/objects/Customer_Sales_Info_Change_Application__c/fields/New_Payment_term__c.field-meta.xml
<CustomField>
    <fullName>New_Payment_term__c</fullName>
    <label>New Payment term</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delivery_Plant__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Payment_Term</valueSetName>
    </valueSet>
</CustomField>