force-app/main/default/objects/Customer_Sales_Info_Change_Application__c/fields/New_Shipping_Conditions__c.field-meta.xml
<CustomField>
    <fullName>New_Shipping_Conditions__c</fullName>
    <label>New Shipping Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Shipping_Conditions</valueSetName>
    </valueSet>
</CustomField>