force-app/main/default/objects/Customer_Sales_Info_Change_Application__c/fields/Old_Account_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Old_Account_Assessment__c</fullName>
    <label>Old Account Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Assessment</valueSetName>
    </valueSet>
</CustomField>