force-app/main/default/objects/Customer_Sales_Info_Change_Application__c/fields/Old_Currency__c.field-meta.xml
<CustomField>
    <fullName>Old_Currency__c</fullName>
    <label>Old Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>