force-app/main/default/objects/Customer_Sales_Info_Change_Application__c/fields/Old_Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Old_Customer_Group__c</fullName>
    <label>Old Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Group</valueSetName>
    </valueSet>
</CustomField>