force-app/main/default/objects/Customer_Sales_Info_Change_Application__c/fields/Old_Payment_term__c.field-meta.xml
<CustomField>
    <fullName>Old_Payment_term__c</fullName>
    <label>Old Payment term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Term</valueSetName>
    </valueSet>
</CustomField>