force-app/main/default/objects/Customer_Sales_Info_Change_Application__c/fields/Old_Shipping_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Old_Shipping_Conditions__c</fullName>
    <label>Old Shipping Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shipping_Conditions</valueSetName>
    </valueSet>
</CustomField>